# Ray-Tracing-CUDA

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
src/: cudaGlobal.cuh  global.cuh  main.cu
src/camera/: camera.cuh  camerabase.cuh
src/geometry/: AABB.cuh  BVH.cuh  hittable.cuh  hittablelist.cuh  ray.cuh  sphere.cuh
src/material/: dielectric.cuh  lambertian.cuh  material.cuh  metal.cuh
src/renderer/: Renderer.cuh
src/scene/: balls_world.cuh  scene.cuh
src/vector/: cude_vector.cuh  vec3f.cu  vec3f.cuh
